# i8080emu

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindCheck.cmake  config.h.in
debug/: .gitignore  CMakeLists.txt  bloomdbg  bloomdbg.c
src/: .gitignore  CMakeLists.txt  bloom.c  bloom.h  cpu.c  cpu.h  loader.c  loader.h  machine.c  machine.h  main.c
src/instruction/: jmp.c  jmp.h  noop.c  noop.h  nop.c  nop.h
test/: .gitignore  CMakeLists.txt  assertions.h  check_bloom.c  run_tests  run_tests.c
test/instructions/: test_instruction_aci.h  test_instruction_adc_a.h  test_instruction_adc_b.h  test_instruction_adc_c.h  test_instruction_adc_d.h  test_instruction_adc_e.h  test_instruction_adc_h.h  test_instruction_adc_l.h  test_instruction_adc_m.h  test_instruction_add_a.h  test_instruction_add_b.h  test_instruction_add_c.h  test_instruction_add_d.h  test_instruction_add_e.h  test_instruction_add_h.h  test_instruction_add_l.h  test_instruction_add_m.h  test_instruction_adi.h  test_instruction_ana_a.h  test_instruction_ana_b.h  test_instruction_ana_c.h  test_instruction_ana_d.h  test_instruction_ana_e.h  test_instruction_ana_h.h  test_instruction_ana_l.h  test_instruction_ana_m.h  test_instruction_ani.h  test_instruction_call_adr.h  test_instruction_cc_adr.h  test_instruction_cm_adr.h  test_instruction_cma.h  test_instruction_cmc.h  test_instruction_cmp_a.h  test_instruction_cmp_b.h  test_instruction_cmp_c.h  test_instruction_cmp_d.h  test_instruction_cmp_e.h  test_instruction_cmp_h.h  test_instruction_cmp_l.h  test_instruction_cmp_m.h  (+206 more)
